--- a/demo/index.html
+++ b/demo/index.html
@@ -76,6 +76,22 @@
 		</div>
 	</div>
 
+	<h2>skrcek</h2>
+	<div mu-widget="Example">
+		<div mu-widget="CreateContent" mu-template="widget" class="">
+			<span mu-id="bAddFirst" class="a">Add as first</span>
+			<ul mu-id="list">
+				<li mu-widget="CreateContentItem">
+					<span mu-id="bAddBefore" class="a">Add before</span>
+					<span mu-id="bAddBefore" class="a">Add after</span>
+					<span mu-id="bRemove" class="a">Remove</span>
+					<span mu-id="label"></span> 
+				</li>
+			</ul>	
+			<span mu-id="bAddLast" class="a">Add as last</span>
+		</div>
+	</div>
+
 	<script src="https://cdn.jsdelivr.net/npm/enlighterjs@3.4.0/dist/enlighterjs.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.2/math.js"
 		integrity="sha512-U9fwz8ekKht5NdL1x4+Yh3DoXeSrsZ0M7ALcijykvrVKD+101nax1MVdc0wNSVh4GOwZGY7yQpz+rAnnoX7O3Q=="
