--- a/demo/index.html
+++ b/demo/index.html
@@ -107,6 +107,9 @@
 		</div>
 	</div>
 
+	<h2>Legacy classes</h2>
+	<div mu-widget="LegacyWidget"><span mu-id="hello"></span></div>
+
 	<script src="https://cdn.jsdelivr.net/npm/enlighterjs@3.4.0/dist/enlighterjs.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/10.0.2/math.js"
 		integrity="sha512-U9fwz8ekKht5NdL1x4+Yh3DoXeSrsZ0M7ALcijykvrVKD+101nax1MVdc0wNSVh4GOwZGY7yQpz+rAnnoX7O3Q=="
