Add simplified attribut mu="id:widget@template"

--- a/demo/index.html
+++ b/demo/index.html
@@ -146,6 +146,14 @@
 		<div mu-widget="RadioListDemo" mu-template="widget">
 		</div>
 	</div>
+
+	<h2>Siplified mu attribute</h2>
+	<div mu-widget="Example">
+		<div mu=":RadioListDemo@widget">
+			dddd
+			<span mu="@template">ddd</span>
+		</div>
+	</div>
 </body>
 
 </html>
