Simple attribute allowe space, some documentation

--- a/demo/index.html
+++ b/demo/index.html
@@ -154,6 +154,12 @@
 			<span mu="@template">ddd</span>
 		</div>
 	</div>
+
+	<h2>Bind self value</h2>
+
+	<div mu-widget="Example">
+		<div mu-widget="MuBindSelf"></div>
+	</div>
 </body>
 
 </html>
