--- a/demo/index.html
+++ b/demo/index.html
@@ -155,10 +155,14 @@
 		</div>
 	</div>
 
-	<h2>Bind self value</h2>
+	<!-- <h2>Bind self value</h2>
 
 	<div mu-widget="Example">
 		<div mu-widget="MuBindSelf"></div>
+	</div> -->
+	<h2>TreeView</h2>
+	<div mu-widget="Example">
+		<div mu=":TreeViewDemo@widget"></div>
 	</div>
 </body>
 
