--- a/demo/index.html
+++ b/demo/index.html
@@ -164,6 +164,11 @@
 	<div mu-widget="Example">
 		<div mu=":TreeViewDemo@widget"></div>
 	</div>
+
+	<h2>Dialog demo</h2>
+	<div mu-widget="Example">
+		<div mu=":DialogDemo@widget"></div>
+	</div>
 </body>
 
 </html>
