--- a/demo/index.html
+++ b/demo/index.html
@@ -169,6 +169,11 @@
 	<div mu-widget="Example">
 		<div mu=":DialogDemo@widget"></div>
 	</div>
+
+	<h2>JSON simlified</h2>
+	<div mu-widget="Example">
+		<div mu=":JsonS@widget"></div>
+	</div>
 </body>
 
 </html>
